<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:focusableInTouchMode="true">

        <!-- Full Name EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameEditText"
                style="@style/EditTextStyle"
                android:hint="@string/full_name_hint"
                android:autofillHints="fullName"
                android:importantForAutofill="yes"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Age Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/age_label" />

        <!-- Age EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                style="@style/EditTextStyle"
                android:hint="@string/age_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Salary Label -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/salary_label" />

        <!-- Salary SeekBar -->
        <SeekBar
            android:id="@+id/salarySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="800"
            android:progress="0"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/salary_label"/>

        <!-- Salary Value TextView -->
        <TextView
            android:id="@+id/salaryValueTextView"
            style="@style/TextViewStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/salary_value_prefix" />

        <!-- Questions -->
        <!-- Question 1 -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/question1RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question1Option1"
                style="@style/RadioButtonStyle"
                android:tag="0"
                android:text="@string/answer_1_option_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question1Option2"
                style="@style/RadioButtonStyle"
                android:tag="1"
                android:text="@string/answer_1_option_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question1Option3"
                style="@style/RadioButtonStyle"
                android:tag="2"
                android:text="@string/answer_1_option_3" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question1Option4"
                style="@style/RadioButtonStyle"
                android:tag="3"
                android:text="@string/answer_1_option_4" />
        </RadioGroup>>

        <!-- Question 2 -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/question2RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question2Option1"
                style="@style/RadioButtonStyle"
                android:tag="0"
                android:text="@string/answer_2_option_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question2Option2"
                style="@style/RadioButtonStyle"
                android:tag="1"
                android:text="@string/answer_2_option_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question2Option3"
                style="@style/RadioButtonStyle"
                android:tag="2"
                android:text="@string/answer_2_option_3" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question2Option4"
                style="@style/RadioButtonStyle"
                android:tag="3"
                android:text="@string/answer_2_option_4" />
        </RadioGroup>

        <!-- Question 3 -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question3RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question3Option1"
                style="@style/RadioButtonStyle"
                android:tag="0"
                android:text="@string/answer_3_option_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question3Option2"
                style="@style/RadioButtonStyle"
                android:tag="1"
                android:text="@string/answer_3_option_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question3Option3"
                style="@style/RadioButtonStyle"
                android:tag="2"
                android:text="@string/answer_3_option_3" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question3Option4"
                style="@style/RadioButtonStyle"
                android:tag="3"
                android:text="@string/answer_3_option_4" />
        </RadioGroup>

        <!-- Question 4 -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/question_4" />

        <RadioGroup
            android:id="@+id/question4RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question4Option1"
                style="@style/RadioButtonStyle"
                android:tag="0"
                android:text="@string/answer_4_option_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question4Option2"
                style="@style/RadioButtonStyle"
                android:tag="1"
                android:text="@string/answer_4_option_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question4Option3"
                style="@style/RadioButtonStyle"
                android:tag="2"
                android:text="@string/answer_4_option_3" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question4Option4"
                style="@style/RadioButtonStyle"
                android:tag="3"
                android:text="@string/answer_4_option_4" />
        </RadioGroup>>
        <!-- Question 5 -->
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/question_5" />

        <RadioGroup
            android:id="@+id/question5RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question5Option1"
                style="@style/RadioButtonStyle"
                android:tag="0"
                android:text="@string/answer_5_option_1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question5Option2"
                style="@style/RadioButtonStyle"
                android:tag="1"
                android:text="@string/answer_5_option_2" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question5Option3"
                style="@style/RadioButtonStyle"
                android:tag="2"
                android:text="@string/answer_5_option_3" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/question5Option4"
                style="@style/RadioButtonStyle"
                android:tag="3"
                android:text="@string/answer_5_option_4" />
        </RadioGroup>


        <!-- CheckBoxes -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/experienceCheckBox"
            style="@style/CheckBoxStyle"
            android:text="@string/experience_label" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/teamworkCheckBox"
            style="@style/CheckBoxStyle"
            android:text="@string/teamwork_label" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/travelCheckBox"
            style="@style/CheckBoxStyle"
            android:text="@string/travel_label" />

        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            style="@style/ButtonStyle"
            android:text="@string/submit_button" />

        <!-- Result TextView -->
        <TextView
            android:id="@+id/resultTextView"
            style="@style/TextViewStyle"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
